--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "@google/genai": "^1.19.0"
+    "@google/genai": "^1.19.0",
+    "@react-oauth/google": "^0.12.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
