--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
-
 {
-  "name": "jobsky-backend",
-  "version": "1.0.0",
-  "description": "Backend server for the JOBSKY application.",
-  "main": "server.js",
+  "name": "jobsky",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "google-auth-library": "^9.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "@google/genai": "^1.19.0",
+    "@react-oauth/google": "^0.12.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.2"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
